company table wip

--- a/Jama/src/main/webapp/agreementWiz.xhtml
+++ b/Jama/src/main/webapp/agreementWiz.xhtml
@@ -56,7 +56,7 @@
 	</h:form>
 
 	<dialogs:chiefDialog name="w_chiefDialog" />
-	<dialogs:companyDialog name="w_companyDialog" />
+	<dialogs:companyDialog dialogWidgetVar="w_companyDialog" editingDisable="false"  />
 	<dialogs:instCreateDialog dialogWidgetVar="w_addInstDialog" dialogId="addInstDialog" wizWidgetVar="w_addInstWiz"
 		observingComponent="contractInstTablePanel" renderShareTable="#{agreementWizardPB.renderShareTable()}" />
 	<dialogs:instViewDialog dialogWidgetVar="w_editInstDialog" dialogId="editInstDialog" wizWidgetVar="w_editInstWiz"
