--- a/Jama/src/main/webapp/userList.xhtml
+++ b/Jama/src/main/webapp/userList.xhtml
@@ -9,38 +9,35 @@
 	<h:form>
 		<input type="hidden" name="cid" value='#{userTablePCB.conversation.id}' />
 
-		<p:panel>
+		<p:dataTable id="userTable" emptyMessage="#{msgs.noUserFound}" lazy="true" value="#{userTablePCB.lazyModel}" var="user" paginator="true" rows="20"
+			rowsPerPageTemplate="10,20,50" paginatorTemplate="{RowsPerPageDropdown} {PreviousPageLink} {NextPageLink}">
 
-			<p:dataTable id="userTable" emptyMessage="#{msgs.noUserFound}" lazy="true" value="#{userTablePCB.lazyModel}" var="user" paginator="true" rows="20"
-				rowsPerPageTemplate="10,20,50" paginatorTemplate="{RowsPerPageDropdown} {PreviousPageLink} {NextPageLink}">
+			<p:column headerText="#{msgs.serialNumber}">
+				<h:outputText value="#{user.serialNumber}" />
+			</p:column>
 
-				<p:column headerText="#{msgs.serialNumber}">
-					<h:outputText value="#{user.serialNumber}" />
-				</p:column>
+			<p:column headerText="#{msgs.surname}" filterBy="#{user.surname}" filterMatchMode="startsWith">
+				<h:outputText value="#{user.surname}" />
+			</p:column>
 
-				<p:column headerText="#{msgs.surname}">
-					<h:outputText value="#{user.surname}" />
-				</p:column>
+			<p:column headerText="#{msgs.name}">
+				<h:outputText value="#{user.name}" />
+			</p:column>
 
-				<p:column headerText="#{msgs.name}">
-					<h:outputText value="#{user.name}" />
-				</p:column>
+			<p:column headerText="#{msgs.role}">
+				<h:outputText value="#{user.role.displayString}" />
+			</p:column>
 
-				<p:column headerText="#{msgs.role}">
-					<h:outputText value="#{user.role.displayString}" />
-				</p:column>
+			<p:column headerText="#{msgs.department}">
+				<h:outputText value="#{user.belongingDepts.get(0).displayName}" />
+			</p:column>
 
-				<p:column headerText="#{msgs.department}">
-					<h:outputText value="#{user.belongingDepts.get(0).displayName}" />
-				</p:column>
+			<p:column headerText="#{msgs.email}">
+				<h:outputText value="#{user.email}" />
+			</p:column>
 
-				<p:column headerText="#{msgs.email}">
-					<h:outputText value="#{user.email}" />
-				</p:column>
+		</p:dataTable>
 
-			</p:dataTable>
-
-		</p:panel>
 
 		<p:commandButton action="#{userTablePCB.backToHome()}" value="#{msgs.home}" immediate="true" />
 	</h:form>
