--- a/Jama/src/main/webapp/agreementEdit.xhtml
+++ b/Jama/src/main/webapp/agreementEdit.xhtml
@@ -21,7 +21,7 @@
 			<p:ajax event="tabChange" listener="#{agreementEditPB.handleFlow}"></p:ajax>
 
 			<p:tab id="tabDati" title="#{msgs.data_Tab}">
-				<sections:agreementWizData editingDisable="false" />
+				<sections:agreementWizData editingDisable="false" companyMenuId="companyMenu" companyMenuWidgetVar="w_companyMenu"  />
 			</p:tab>
 
 
