--- a/Jama/src/main/webapp/agreementWiz.xhtml
+++ b/Jama/src/main/webapp/agreementWiz.xhtml
@@ -21,7 +21,7 @@
 		<p:wizard step="#{agreementWizardPB.currentTabId}" flowListener="#{agreementWizardPB.handleFlow}" onback="setHideShow();">
 
 			<p:tab id="tabDati" title="#{msgs.data_Tab}">
-				<sections:agreementWizData editingDisable="false" creating="true" />
+				<sections:agreementWizData editingDisable="false" creating="true" companyMenuId="companyMenu" companyMenuWidgetVar="w_companyMenu" />
 			</p:tab>
 
 			<p:tab id="tabRip" title="#{msgs.shareTable_Tab}" rendered="#{agreementWizardPB.renderShareTable() == true}">
@@ -56,7 +56,9 @@
 	</h:form>
 
 	<dialogs:chiefDialog name="w_chiefDialog" />
-	<dialogs:companyDialog dialogWidgetVar="w_companyDialog" editingDisable="false"  />
+	<dialogs:companyDialog dialogWidgetVar="w_companyDialog" editingDisable="false" observingComponentId="companyMenu"
+		observingComponentWidgetVar="w_companyMenu" dialogId="companyDialog" />
+		
 	<dialogs:instCreateDialog dialogWidgetVar="w_addInstDialog" dialogId="addInstDialog" wizWidgetVar="w_addInstWiz"
 		observingComponent="contractInstTablePanel" renderShareTable="#{agreementWizardPB.renderShareTable()}" />
 	<dialogs:instViewDialog dialogWidgetVar="w_editInstDialog" dialogId="editInstDialog" wizWidgetVar="w_editInstWiz"
