--- a/Jama/src/main/webapp/agreementEdit.xhtml
+++ b/Jama/src/main/webapp/agreementEdit.xhtml
@@ -11,7 +11,7 @@
 
 <h:body onload="setHideShow();">
 
-	<p:growl autoUpdate="true" sticky="true" />
+	<p:growl autoUpdate="true" sticky="true" showDetail="true" showSummary="false" />
 
 	<h:form id="agreementEdit">
 
