--- a/Jama/src/main/webapp/agreementWiz.xhtml
+++ b/Jama/src/main/webapp/agreementWiz.xhtml
@@ -13,7 +13,7 @@
 </h:head>
 <h:body>
 
-	<p:growl autoUpdate="true" sticky="true" />
+	<p:growl autoUpdate="true" sticky="true" showDetail="true" showSummary="false" />
 
 	<h:form id="agreementWiz">
 		<input type="hidden" name="cid" value='#{contractManager.conversation.id}' />
